# agent

./: .dockerignore  .gitignore  README.md  dev.sh  pyproject.toml
docker/: Dockerfile  docker-compose.yaml
src/agent/: __init__.py  cli.py  config.py  core.py  deps.py  main.py
src/agent/agents/: __init__.py  coder.py  docs.py  reviewer.py  tester.py
src/agent/cli/: __init__.py  app.py
src/agent/core/: agent_base.py  conversation.py  executor.py  pipeline_base.py  system.py
src/agent/embeddings/: __init__.py  base.py  chunker.py  indexer.py  openai_embed.py  store.py
src/agent/gui/: app.py
src/agent/mcp/: __init__.py  filesystem_client.py  git_client.py  runpython_client.py
src/agent/models/: llm_base.py
src/agent/pipelines/: __init__.py  docs_pipeline.py  refactor_pipeline.py  test_pipeline.py  validate_pipeline.py
src/agent/tools/: __init__.py  exec_py.py  file_ops.py  search.py  tests.py  typecheck.py
src/agent/util/: __init__.py  files.py  prompts.py
src/agent/vectorstore/: __init__.py  base.py  chroma_store.py
src/agent/watcher/: __init__.py  fs_watch.py
tests/: test_smoke.py
