[tool.poetry]
name = "agent"
version = "0.0.1"
description = "A self-modifying, Pydantic-AI driven code-writing assistant."
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "agent", from = "src" }]

[tool.poetry.dependencies]
python = "^3.12"
pydantic = ">=2,<3.0.0"
aiohttp  = ">=3,<4.0.0"

[tool.poetry.group.dev.dependencies]
black = ">=24,<25.0.0"
mypy  = ">=1,<2.0.0"
pytest = ">=8,<9.0.0"
jupyterlab  = ">=3.0,<4.0"

[tool.poetry.scripts]
agent = "agent.cli:main"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
